--- a/app/blog/templates/blog/home.html
+++ b/app/blog/templates/blog/home.html
@@ -7,8 +7,8 @@
     <title>home</title>
 </head>
 <body>
-    <h1>Hello Yousef</h1>
     {% for article in articles %}
+    <h1><a href=" {% url 'blog:details' article.slug %} ">Hello Yousef</a></h1>
     <p>{{article.title}}</p>
     <img src="{{article.thumbnail.url}}" alt=" {{article.title}} " height="500px" srcset="">
     <p> {{article.description}} </p>
