paginate is done

--- a/app/blog/static/blog/css/rtl.css
+++ b/app/blog/static/blog/css/rtl.css
@@ -19,3 +19,7 @@ body{
     margin-left: initial !important;
     margin-right: auto;
 }
+
+/* .post-preview > a > .post-title{
+    font-size: 40px;
+} */
