--- a/app/blog/templates/blog/myindex.html
+++ b/app/blog/templates/blog/myindex.html
@@ -26,13 +26,15 @@
             <!-- Divider-->
              <hr class="my-4" />
             <!-- Pager-->
+            {% if is_paginated %}
             <div class="  mb-4">
-                {% if articles.has_next %}
-                <a class="btn btn-primary " href="{% url 'blog:home' articles.next_page_number %}">→ Older Posts </a> 
+                {% if page_obj.has_next %}
+                <a class="btn btn-primary " href="{% url 'blog:home' page_obj.next_page_number %}">→ Older Posts </a> 
                 {% endif %}
-                {% if  articles.has_previous%}
-                <a class="btn btn-primary  ml-3" href=" {% url 'blog:home' articles.previous_page_number %} ">Newest Posts →</a>
+                {% if  page_obj.has_previous%}
+                <a class="btn btn-primary  ml-3" href=" {% url 'blog:home' page_obj.previous_page_number %} ">Newest Posts →</a>
                 {% endif %} 
+            {% endif %}
             </div> 
         </div>
     </div>
