--- a/app/blog/templates/blog/details.html
+++ b/app/blog/templates/blog/details.html
@@ -1,15 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>blog | {{article.title}} </title>
-</head>
-<body>
-    <h1> {{article.title}} </h1>
-    <p> {{article.description}} </p>
-    <img src=" {{article.thumbnail.url}} " alt=" {{article.title}} " srcset="">
-    <p> {{article.published}} </p>    
-</body>
-</html>
+{% extends 'blog/base.html' %}
+
+{% block bg %} {{article.thumbnail.url}}  {% endblock %}
+{% block title %} <h3> {{article.title}} </h3> {% endblock %}
+{% block main %}
+        <!-- Post Content-->
+        <article class="mb-4">
+            <div class="container px-4 px-lg-5">
+                <div class="row gx-4 gx-lg-5 justify-content-center text-justify">
+                    <div class="col-md-10 col-lg-8 col-xl-7 " style="text-align: justify;">
+                       {{article.description| linebreaks }}
+                        <p>منتشر شده‌:‌<a href=""> {{article.jpublished}} </a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </article>
+        <!-- Footer-->
+{% endblock main %}
+
