--- a/app/blog/templates/blog/index.html
+++ b/app/blog/templates/blog/index.html
@@ -26,6 +26,14 @@
             <!-- Divider-->
              <hr class="my-4" />
             <!-- Pager-->
+            <div class="  mb-4">
+                {% if articles.has_next %}
+                <a class="btn btn-primary " href="{% url 'blog:home' articles.next_page_number %}">→ Older Posts </a> 
+                {% endif %}
+                {% if  articles.has_previous%}
+                <a class="btn btn-primary  ml-3" href=" {% url 'blog:home'    articles.previous_page_number %} ">Newest Posts →</a>
+                {% endif %} 
+            </div>
 
         </div>
     </div>
